# biopeaks

./: .coveragerc  .gitignore  .mailmap  .travis.yml  .zenodo.json  CITATION.cff  MANIFEST.in  README.md  README.txt  analysis_utils.py  backend_test.py  benchmark_ecg.py  benchmark_ecg_online.py  benchmark_ppg.py  benchmark_resp.py  benchmark_resp_offline.py  biopeaks.py  biopeaks.qrc  biopeaks_test.py  biopeaks_tests.py  code_of_conduct.md  controller.py  ecg_artifact_correction.py  ecg_offline.py  ecg_online.py  ecg_online_light.py  environment.yml  filters.py  frontend_test.py  get_bidmc.py  gui.py  guiutils.py  model.py  montage2A.txt  montage2J.txt  parameter_search_ecg_offline.py  ppg_offline.py  pyproject.toml  resp_offline.py  resp_online.py  (+3 more)
.devcontainer/: devcontainer.json  install_system_dependencies.sh  post_create.sh
.github/workflows/: CI.yml  build.yml  manual_build.yml  publish.yml  pyinstaller.yml  test.yml
biopeaks/: __init__.py  __main__.py  analysis_utils.py  biopeaks.py  controller.py  ecg.py  filters.py  heart.py  io_utils.py  model.py  resources.py  resp.py  view.py
biopeaks/benchmarks/: benchmark_ECG_local.py  benchmark_ECG_stream.py  benchmark_PPG_local.py  benchmark_utils.py
biopeaks/tests/: backend_test.py  benchmark_ECG.py  benchmark_GUDB.py  benchmark_PPG.py  frontend_test.py  test_gui.py  test_heart.py  test_resp.py
biopeaks/tests/testdata/: OSmontagePPG.txt
docs/: _config.yml  additional_resources.md  changelog.md  citation.md  contributor_guide.md  index.md  installation.md  tests.md  user_guide.md
docs/_layouts/: default.html
paper/: breathing_snippet.tsv  ecg_snippet.tsv  generate_fig_breathingamplitude.py  generate_fig_breathingperiod.py  generate_fig_heartperiod.py  paper.bib  paper.md
pyinstaller/: environment.yml  pyinstaller_entry.py
test/: frontend_test.py
testdata/: montage1A.txt  montage1J.txt  montage3A.txt  montage3J.txt
