[tool.poetry]
name = "biopeaks"
version = "1.4.4"
description = "A graphical user interface for feature extraction from heart- and breathing biosignals."
authors = ["Jan C. Brammer <jan.c.brammer@gmail.com>"]
license = "GPL-3.0"
exclude = ["misc", "paper", "docs"]
readme = "README.md"
keywords= ["ECG", "PPG", "Breathing", "Biosignals", "GUI"]
repository = "https://github.com/JanCBrammer/biopeaks"
documentation = "https://jancbrammer.github.io/biopeaks"

[tool.poetry.dependencies]
# Currently forced to cap Python at 3.11 due to PyInstaller requirements.
python = ">=3.9,<3.11"
scipy = ">=1.7.3"
numpy = ">=1.22.0"
pandas = ">=1.3.5"
matplotlib = ">=3.5.0"
PySide6 = ">=6.2.2"
# Don't include PyInstaller in dev-dependencies.
# Instead install PyInstaller as extra (see below) in order to keep virtual environment lean when building an executable.
# I.e., don't install dev-dependencies when building with PyInstaller.
pyinstaller = { version = ">=4.7", optional = true }

[tool.poetry.dev-dependencies]
# linting
flake8 = ">=4.0.1"
# testing
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
pytest-qt = ">=4.0.2"
# benchmarking
aiohttp = ">=3.8.1"
wfdb = ">=3.4.1"
h5py = ">=3.6.0"

[tool.poetry.extras]
pyinstaller = ["pyinstaller"]

[tool.poetry.scripts]
# command line entry-point
biopeaks = "biopeaks.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
