[tool.poetry]
name = "biopeaks"
version = "1.4.4"
description = "A graphical user interface for feature extraction from heart- and breathing biosignals."
authors = ["Jan C. Brammer <jan.c.brammer@gmail.com>"]
license = "GPL-3.0"
exclude = ["misc", "paper", "docs"]
readme = "README.md"
keywords= ["ECG", "PPG", "Breathing", "Biosignals", "GUI"]
repository = "https://github.com/JanCBrammer/biopeaks"
documentation = "https://jancbrammer.github.io/biopeaks"

[tool.poetry.dependencies]
# Implicit "main" group.
python = ">=3.10,<3.13"
scipy = ">=1.7.3"
numpy = ">=1.22.0"
pandas = ">=1.3.5"
matplotlib = ">=3.5.0"
PySide6 = ">=6.2.2"

[tool.poetry.group.dev.dependencies]
# Testing.
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
pytest-qt = ">=4.0.2"
pytest-xvfb = ">=3.0.0"
# Benchmarking.
aiohttp = ">=3.8.1"
wfdb = ">=3.4.1"
h5py = ">=3.6.0"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.9.0"

[tool.poetry.scripts]
# Command line entry-point.
biopeaks = "biopeaks.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
